--- a/leonardo/css/main-mobile-500.css
+++ b/leonardo/css/main-mobile-500.css
@@ -34,7 +34,7 @@
         padding: 1rem 0.5rem 1rem 1rem;
     }
     .lang-section .empty {
-        width: 85vw;
+        width: 56vw;
     }
     .lang-section .icons ul li {
         float: left;
@@ -57,31 +57,39 @@
     .nav-container{
         background: var(--light-green);
         width: 100vw;
-        height: 12vh;
+        padding: 2rem 0;
+        height: auto;
         font-size: 1.2rem;
         color: var(--dark-green);
         box-shadow: 0 0.5rem 1rem var(--overlay);
+        flex-direction: column;
+        justify-content: space-between;
     }
-    .nav-container aside{
-        display: none;
-        visibility: hidden;
-        }
     
     .nav-container .flex-item1 {
-        margin-left: 10rem;
+        align-self: center;
+        text-align: center;
+        width: 100%;
     }
     
     .nav-container .flex-item2{
-        margin-left: 4rem;
+        width: 100%;
+        align-self: flex-start;
+        text-align: left;
     }
     .nav-container .flex-item3 {
-        margin-left: 4rem;
+        width: 100%;
+        padding-bottom: 3rem;
+        align-self: center;
+    }
+    .nav-container .flex-item3 a.button {
+        width: 10rem !important;
     }
     
     .nav-container ul li{
         list-style-type: none;
-        float: left;
-        padding: 0 1.5rem;
+        clear: left;
+        padding: 1rem;
         font-size: 1.4rem;
         font-weight: 550;
     }
@@ -166,10 +174,12 @@
         cursor: pointer;
         font-size: 1.4rem;
     }
+    .hero .overlay {
+        min-height: 80vh;
+    }
     .overlay{
         width: 100%;
         background: var(--overlay);
-        min-height: 80vh;
         position: absolute;
     }
     .hero h1{
@@ -251,18 +261,21 @@
     .relative {
         position: relative;
     }
+    .about-home .content-wrapper .image-wrapper {
+        display: flex;
+    }
     .about-home #tab {
         position: relative;
-        scale: 50%;
-        left: -32.5%;
-        top: -20%;
+        top: 2rem;
+        left: 7rem;
+        scale: 80%;
     }
     .about-home #iphone{
         /* display: none; */
-        scale: 40%;
+        scale: 100%;
         position: absolute;
-        bottom: 0;
-        left: -2rem;
+        top: 8rem;
+        left: 6rem;
     }
     .about-home .image-wrapper{
         order: 0;
@@ -292,19 +305,17 @@
         border-top-left-radius: 1.5rem;
         border-top-right-radius: 1.5rem;
     }
-    .discover-home {
-        color: var(--white);
-        background-color: var(--black);
-        text-align: center;
+    .discover-home .top img{
+        scale: 80%;
     }
     .discover-home .content-wrapper .flex-box {
         flex-direction: column;
+        justify-content: space-around;
     }
     .discover-home p{
         font-size: 1.8rem;
         padding: 0 2rem;
         text-align: left;
-
     }
     .discover-home .top{
         min-height: 100vh;
@@ -316,7 +327,6 @@
     }
     .discover-home .content-wrapper{
         width: 90vw;
-        color: var(--white);
     }
     .discover-home .content-wrapper .bold {
         font-size: 2.6rem;
@@ -327,7 +337,7 @@
     }
     .discover-home .content-wrapper .flex-item {
         width: 90vw;
-        /* height: 80vh; */
+        height: 75vh;
         margin: 2rem auto 2rem;
         border-radius: 2rem;
     }
@@ -338,7 +348,7 @@
     .discover-home .overlay{
         padding: 0 !important;
         width: 90vw;
-        height: 80vh;
+        min-height: 75vh;
         border-radius: 2rem;
         z-index: 0;
         background-color: var(--overlay-mid);
@@ -349,7 +359,7 @@
     }
     .discover-home .content-wrapper .flex-item .text{
         position: relative;
-        top: 25%;
+        top: 45%;
     }
     .discover-home .content-wrapper #voice{
         background: url('../images/Pexels\ Photo\ by\ Andrea\ Piacquadio.png');
@@ -405,13 +415,10 @@
     .inspired{
         max-width: 100vw;
         min-height: 40vh;
-        color: var(--white);
-        background: url('../images/young-woman-using-home-technology\ 2.png');
-        background-size: cover;
     }
     .inspired .content-wrapper{
         flex-direction: column;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
     .inspired h2{
         font-size: 2.2rem;
@@ -445,18 +452,18 @@
     .plans h5{
         text-align: center;
         font-size: 1.4rem;
-        margin-bottom: 1rem;
+        margin-bottom: 0;
     }
     .plans .plan .mini-logo{
+        width: 100%;
         text-align: center;
         align-self: center;
     }
     .plans .plan .mini-logo li img {
-        scale: 60%;
+        scale: 70%;
     }
     .pro {
-        margin-top: 2rem;
-        padding: 1rem 1.5rem;
+        align-self: center;
         border-radius: 1rem;
     }
     .pro-green{
@@ -476,7 +483,8 @@
     }
     .plans .content-wrapper .image-wrapper .plan .flex-item {
         padding: 1rem 0;
-    }
+        width: 100%;
+        }
     .plans .content-wrapper .image-wrapper .plan ul.mini-logo li{
         list-style: none;
         float: left;
@@ -490,7 +498,7 @@
     }
     .plans small.bold{
         font-size: 1.4rem;
-        margin: -3rem 0 3rem 12rem;
+        margin: -3rem 0 3rem 0;
     }
     .plans p.bold{
         align-self: flex-start;
@@ -512,16 +520,16 @@
     .plans #basic {
         position: relative;
         background-color: var(--white);
-        height: 50rem;
-        flex-direction: column;
-        left: 0;
+        height: 55rem;
+        align-self: center;
         border: 0.2rem solid var(--pure-black);
         border-radius: 1.5rem;
-        top: 0%;
+        top: -15rem;
+        left: 0;
         box-shadow: 0.01rem 0.01rem 0.3rem 0.003rem var(--black);
     }
     .plan{
-        scale: 90%;
+        min-width: 35rem !important;
     }
     .plans .basic-btn{
         margin-top: 8rem;
@@ -535,22 +543,18 @@
     .plans #premium {
         position: relative;
         background-color: var(--white);
-        height: 55rem;
+        height: 65rem;
         flex-direction: column;
-        border: 0.2rem solid var(--pure-black);
-        border-radius: 1.5rem;
-        left: 1%;
-        box-shadow: 0.02rem 0.02rem 0.5rem 0.1rem var(--black);}
+        top: -20rem;
+        align-self: center;
+    }
     .plans #business{
         position: relative;
         background-color: var(--white);
-        height: 50rem;
+        height: 65rem;
         flex-direction: column;
-        right: 0;
-        border: 0.2rem solid var(--pure-black);
-        border-radius: 1.5rem;
-        top: -13%;
-        box-shadow: 0.01rem 0.01rem 0.3rem 0.003rem var(--black);
+        top: -24rem;
+        left: 0;
     }
     .plans button {
         scale: 120%;
@@ -567,21 +571,23 @@
         color: var(--white);
     }
     .plans .image-wrapper{
-        /* margin: auto; */
+        display: flex;
         flex-direction: column;
         min-height: 100vh;
         width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center;
         background-color: var(--light-green);
     }
      .app-link-wrapper{
         width: 100%;
-        min-height: 100vh;
+        min-height: 80vh;
         background-color: var(--light-green);
         padding-bottom: 2rem;
         position: relative;
-        margin-top: -4%;
+        margin-top: -38%;
         flex-direction: column;
-
     }
     .app-link-wrapper h3{
         margin-top: -12rem;
@@ -610,7 +616,7 @@
     .plans .app-link-wrapper .download-img #tab {
         position: relative;
         scale: 50%;
-        left: -15.5rem;
+        left: -12.5rem;
         top: -5rem;
     }
     .app-link-wrapper .download-img {
@@ -621,7 +627,7 @@
     }
     footer .service {
         color: var(--white);
-        min-height: 38vh;
+        min-height: 28vh;
         flex-direction: column;
         text-align: center;
         font-size: 1.2rem;
@@ -696,7 +702,7 @@
         padding: 6rem;
     }
     .auto-layout .layout-content {
-        height: 45rem;
+        min-height: 45rem;
     }
     .auto-layout .layout-content img{
         height: 100%;
@@ -704,11 +710,15 @@
         border-radius: 4rem;
     }
     .smarts, .devices{
+        width: 100%;
         flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
     }
     .smarts .image-holder {
         align-self: center;
-        margin: auto;
+        text-align: center;
+        display: flex;
     }
     .smarts h3 {
         font-size: 2.6rem;
@@ -721,18 +731,21 @@
     }
     
     .smarts .image-holder #img-left{
-        margin-right: -2rem;
+        margin: 0;
+        order: 1;
         height: 30rem;
     }
     .smarts .image-holder #img-right{
-        margin-left: -2rem;
         z-index: -1;
+        margin: 0;
         height: 30rem;
     }
     .smarts #img-mid{
         height: 30rem;
+        margin: 0;
     }
     .matter {
+        width: 100%;
         background-color: var(--light-green);
         flex-direction: column;
         padding: 3rem 0;
@@ -741,7 +754,8 @@
         align-self: center;
     }
     .matter .image-holder img {
-        height: 50rem;
+        width: 100%;
+        height: auto;
     }
     .matter h3, .devices h3{
         font-size: 2.6rem;
@@ -754,29 +768,17 @@
     }
     .devices {
         min-height: 80vh;
+        margin-bottom: 20rem;
     }
     .devices .image-holder img{
-        height: 50rem;
-    }
-    .app-links {
-        background-color: var(--light-green);
-        padding: 2rem 0 4rem;
-    }
-    .app-links .app-link-wrapper{
-        padding: 4rem 0;
-    }
-    .app-links .app-link-wrapper img#tab{
-        left: -20%;
-        top: -40%;
-    }
-    .app-links .app-link-wrapper img#iphone{
-        top: -25%;
-        right: -1%;
+        height: auto;
+        width: 100%;
     }
     
     
     /* Support Page Styling */
     .help{
+        width: 100%;
         padding: 4rem 14rem;
     }
     .help h5{
@@ -791,7 +793,7 @@
         height: 4.8rem;
         border-radius: 1rem;
         border: 0.12rem solid #818282;
-        margin-right: 1rem;
+        margin: 0.5rem;
     }
     .help form input::placeholder {
         padding-left: 2rem;
@@ -799,26 +801,26 @@
     .bg-big{
         min-height: 45vh;
         background: url('../images/unsplash_laptop.png');
-        width: 80vw;
+        width: 100%;
         background-size: cover;
         margin: auto;
         border-radius: 1.5rem;
     }
     .bg-big .overlay{
         min-height: 45vh;
-        width: 80vw;
+        width: 100%;
         border-radius: 1.5rem;
     }
     .bg-big h3 {
-        padding-bottom: 3rem;
-        font-size: 3.5rem;
+        padding-bottom: 1rem;
+        font-size: 2rem;
         color: var(--white);
         text-align: center;
         padding-top: 11rem;
         position: relative;
     }
     .bg-big input[type=search] {
-        margin-left: 18%;
+        margin-left:3rem !important;
         background-color: #cce6e63e;
         position: relative;
         width: 53.5rem;
@@ -828,6 +830,7 @@
     }
     .bg-big input[type=search]::placeholder {
         color: var(--light-green);
+        font-size: 1rem;
         padding: 0 2rem;
     }
     .faq {
@@ -869,7 +872,7 @@
         width: 28vw;
         margin: 0.5%;
         background-color: var(--light-green);
-        height: 15vh;
+        min-height: 15vh;
         border-radius: 1.5rem;
         text-align: center;
         padding: 3rem 0 2rem;
@@ -877,7 +880,7 @@
         box-shadow: 0.01rem 0.01rem 0.8rem 0.003rem var(--mid-green);
     }
      .repair .repair-cards .flex-item h5{
-        font-size: 2rem;
+        font-size: 1.4rem;
     }
     .repair .repair-cards .flex-item h5 a{
         text-decoration: none;
@@ -887,7 +890,7 @@
     }
 
     .connect {
-        padding: 0 !important;
+        padding: 2rem 0 !important;
     }
     .connect .image-wrapper {
         width: 40%;
@@ -917,4 +920,24 @@
     .app-links .app-link-wrapper{
         padding: 6rem 0 0 4rem;
     }
+    .app-links {
+        background-color: var(--light-green);
+        padding: 2rem 0 4rem;
+        min-height: 40vh;
+    }
+    .app-links .app-link-wrapper{
+        padding: 4rem 0;
+    }
+    .app-links .app-link-wrapper img#tab{
+        scale: 40%;
+        left: -15rem;
+        top: 2rem;
+    }
+    .app-links .app-link-wrapper img#iphone{
+        top: 6rem;
+        scale: 40%;
+        left: -4rem;
+        display: flex;
+    }
+
 }
