--- a/leonardo/css/mini-tablet-768.css
+++ b/leonardo/css/mini-tablet-768.css
@@ -34,7 +34,7 @@
         padding: 1rem 0.5rem 1rem 1rem;
     }
     .lang-section .empty {
-        width: 85vw;
+        width: 65vw;
     }
     .lang-section .icons ul li {
         float: left;
@@ -67,14 +67,17 @@
         }
     
     .nav-container .flex-item1 {
-        margin-left: 5rem;
+        max-width: 8%;
+        margin: 0;
     }
     
     .nav-container .flex-item2{
-        margin-left: 1rem;
+        max-width: 80%;
+        margin: 0;
     }
     .nav-container .flex-item3 {
-        margin-left: 2rem;
+        max-width: 12%;
+        margin: 0;
     }
     a.button {
         border-radius: 1.5rem !important;
@@ -125,12 +128,16 @@
         padding: 1rem 0;
     }
     .hero #search {
+        margin: 2rem 0;
         width: 50vw;
         background-color: var(--blue-transparent);
         color: var(--search-text);
         padding: 1rem;
         border-radius: 0.8rem;
         border: 0.2rem solid var(--light-green);
+    }
+    .hero .content-wrapper .flex-item1 {
+        margin-top: 4rem;
     }
     .hero .content-wrapper .flex-item2{
         font-size: 1.2rem;
@@ -148,14 +155,15 @@
         margin: 0.3rem 0.4rem;
         padding: 0.1 !important;
     }
-    .hero button#explore{
+    .hero .explore button#explore{
         background-color: var(--no-color);
         border: 0.2rem solid var(--white);
-        font-size: 1rem;
+        font-size: 1.2rem;
+        margin: 2rem ;
     }
-    .hero button#start{
+    .hero a#start{
         border: 0.2rem solid var(--dark-green);
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
     .hero button#start:hover, button.more:hover, button:hover, a.button:hover{
         background-color: var(--orange);
@@ -167,10 +175,12 @@
         cursor: pointer;
         font-size: 1.4rem;
     }
+    .hero .overlay{
+        min-height: 80vh;
+    }
     .overlay{
         width: 100%;
         background: var(--overlay);
-        min-height: 80vh;
         position: absolute;
     }
     .hero h1{
@@ -178,16 +188,12 @@
     }
     .hero .content-wrapper {
         font-size: 1.6rem;
-        color: var(--white);
-        position: absolute;
-        text-align: center;
-        flex-direction: column;
-        width: 85vw;
-        left: 7.5vw;
-        top: 10vh;
     }
-    .content-wrapper h1, .content-wrapper p, .content-wrapper .button-holder {
+    .content-wrapper h1, .content-wrapper p {
         flex-direction: column;
+    }
+    .content-wrapper .button-holder {
+        flex-direction: row;
     }
     
     .dynamic-home{
@@ -253,15 +259,14 @@
         position: relative;
     }
     .about-home #tab {
-        top: -20rem;
-        left: -8rem;
-        scale: 50%;
+        left: 8rem;
+        scale: 100%;
+        top: -12rem;
     }
     .about-home #iphone{
-        /* display: none; */
-        scale: 50%;
-        top: -10rem;
-        left: -4rem;
+        scale: 400%;
+        top: 6rem;
+        left: 34rem;
     }
     .about-home .image-wrapper{
         width: 50%;
@@ -316,7 +321,7 @@
     }
     .discover-home .content-wrapper .flex-item {
         width: 40vw;
-        /* height: 80vh; */
+        height: 60vh;
         margin: 1.5rem;
         border-radius: 2rem;
     }
@@ -326,8 +331,8 @@
     }
     .discover-home .overlay{
         padding: 0 !important;
-        width: 40vw;
-        height: 80vh;
+        max-height: 60vh !important;
+        width: 100% !important;
         border-radius: 2rem;
         z-index: 0;
         background-color: var(--overlay-mid);
@@ -490,9 +495,8 @@
         text-align: left;
     }
     .plans #basic {
-        scale: 60%;
-        position: absolute;
-        left: -35rem;
+        scale: 80%;
+        left: 9rem;
         top: -15rem;
         }
     .plans .basic-btn{
@@ -505,16 +509,16 @@
         margin-top: 10rem;
     }
     .plans #premium {
-        scale: 60%;
+        scale: 80%;
         position: absolute;
-        left: -18rem;
         top: -18rem;
+        left: auto;
 }
     .plans #business{
         position: absolute;
-        scale: 60%;
-        right: -33rem;
+        scale: 80%;
         top: -15rem;
+        right: 9rem;
     }
     .plans button {
         scale: 100%;
@@ -533,12 +537,12 @@
     .plans .image-wrapper{
         /* margin: auto; */
         position: relative;
-        min-height: 88vh;
+        min-height: 80vh;
         background-color: var(--light-green);
     }
      .app-link-wrapper{
         width: 100%;
-        min-height: 100vh;
+        min-height: 80vh;
         background-color: var(--light-green);
         padding-bottom: 2rem;
         position: relative;
@@ -573,8 +577,8 @@
     .plans .app-link-wrapper .download-img #tab {
         position: relative;
         scale: 50%;
-        left: -15.5rem;
-        top: -5rem;
+        left: -12.5rem;
+        top: 0;
     }
     .app-link-wrapper .download-img {
         order: 1;
@@ -584,7 +588,7 @@
     }
     footer .service {
         color: var(--white);
-        min-height: 38vh;
+        min-height: 25vh;
         flex-direction: column;
         text-align: center;
         font-size: 1.2rem;
@@ -611,15 +615,17 @@
     }
     footer .quick-links{
         flex-direction: row;
+        position: relative;
+        justify-content: space-between;
         padding: 3% 5% 0 10%;
-        min-height: 80vh;
+        height: auto;
         background-color: var(--black);
         border-bottom: 0.1rem solid var(--white);
     }
     footer .quick-links ul {
-        align-self: center;
+        align-self: flex-start;
         font-size: 1.2rem;
-        width: 90%;
+        width: auto;
         color: var(--white);
         list-style-type: none;
     }
@@ -717,26 +723,12 @@
         text-align: center;
     }
     .devices {
-        min-height: 100vh;
+        min-height: 80vh;
     }
     .devices .image-holder img{
-        height: 40rem;
+        height: auto;
+        width: 100%;
         padding-bottom: 2rem;
-    }
-    .app-links {
-        background-color: var(--light-green);
-        padding: 2rem 0 4rem;
-    }
-    .app-links .app-link-wrapper{
-        padding: 4rem 0;
-    }
-    .app-links .app-link-wrapper img#tab{
-        left: -20%;
-        top: -40%;
-    }
-    .app-links .app-link-wrapper img#iphone{
-        top: -25%;
-        right: -1%;
     }
     
     
@@ -839,7 +831,7 @@
         width: 28vw;
         margin: 0.5%;
         background-color: var(--light-green);
-        height: 15vh;
+        min-height: 18vh;
         border-radius: 1.5rem;
         text-align: center;
         padding: 3rem 0 2rem;
@@ -892,23 +884,35 @@
         font-size: 2.4rem;
         margin-top: -5rem;
     }
-    .app-links{
+    .app-links {
+        padding: 20rem 0 0;
+        background-color: var(--light-green);
+        padding: 2rem 0 4rem;
+        height: auto;
         position: relative;
     }
     .app-links .app-link-wrapper{
         flex-direction: column;
-        padding: 6rem 0 0 4rem;
-    }
-    .app-links .app-link-wrapper .download-content{
+        justify-content: space-between;
+        align-items: flex-start;
         position: relative;
-        margin-top: 9rem;
-        order: 2;
-        top: 32rem;
+        padding: 2rem 0;
     }
-    .app-links .app-link-wrapper .download-img {
-        top: -7rem;
-        left: -2rem;
-        position: relative;
-        order: 1;
+    .app-links .app-link-wrapper .download-content img{
+        width: 20rem;
+    }
+    .app-links .download-img {
+        align-self: flex-start;
+    }
+
+    .app-links .app-link-wrapper img#tab{
+        left: 2.4rem;
+        top: 4rem;
+    }
+    .app-links .app-link-wrapper img#iphone{
+        display: flex;
+        left: 0;
+        top: 3rem;
+        scale: 50%;
     }
 }
